# global-pose-manager

./: CMakeLists.txt  README.md  map_service.md  package.xml
launch/: localization_bringup.launch
scripts/: random_initial_pose.py  random_initial_pose1.py  rrandom_initial_pose.py
src/: global_pose_manager_node.cp1  global_pose_manager_node.cpp
